test/incremental/unused_labels.0.zig
comptime {
    foo: {}
}

// error
// output_mode=Exe
//
// :2:5: error: unused block label
